Fix: on safari text select button contained within

--- a/style.css
+++ b/style.css
@@ -399,6 +399,7 @@ z-index: 10;
 
 /* ------------------- Button Grid styles ------------------- */
 .pixel-button {
+    position: relative;
     display: grid;
     row-gap: 0;
     column-gap: 0;
